--- a/CSSstyles/thongtin.css
+++ b/CSSstyles/thongtin.css
@@ -1,76 +1,142 @@
-
-body {
-    background-color: #C2FBFF;
+.left-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 100%;
+    background-color: #190E4F;
+    color: #fff;
     font-family: Arial, sans-serif;
+    font-size: 20px;
+    line-height: 1.5;
+    padding: 20px;
+}
+
+.left-menu ul {
+    list-style: none;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
-#account-container {
-    width: 400px;
-    
-    margin-top: 50px;
 
-    
-    border-radius: 20px;
-    background-color: white;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+.left-menu ul li {
+    margin-bottom: 10px;
 }
-h1 {
-    text-align: center;
-    color: #333;
-}
-form {
-    margin: 20px 0;
-}
-label {
-    font-weight: bold;
-}
-input[type="text"] {
-    padding: 10px;
-    margin: 5px 0;
-    border: none;
-    border-radius: 5px;
-    background-color:#f2f2f2;
-    font-size: 16px;
-    width: 100%;
-}
-input[type="submit"] {
-    background-color: rgb(0, 187, 204);
-    border: none;
-    border-radius: 5px;
-    color: white;
-    font-size: 18px;
-    height: 45px;
-    margin: 20px auto 0;
-    width: 120px;
-}
-a {
+
+.left-menu ul li a {
+    color: hwb(0 100% 0%);
     text-decoration: none;
-    color: #666;
 }
-a:hover {
+
+.left-menu ul li a:hover {
     text-decoration: underline;
 }
-#change-password {
-    text-align: center;
-    margin-top: 20px;
+
+.public-profile {
+    box-shadow: 2px 2px 5px grey;
+    position: absolute;
+    background: #EDEDE9;
+    left: 350px;
+    width: 100%;
+    display: flex;
 }
-#change-password a {
-    color: #00BBCC;
+
+.public-profile .profile-image {
+    margin-right: 104px;
+}
+
+.public-profile .profile-image img {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+}
+
+.public-profile .profile-info {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+.public-profile .profile-info button {
+    background-color: transparent;
+    color: #3300ff;
+    border: 1px solid #3300ff;
+    padding: 5px 10px;
+    border-radius: 20px;
+    margin-top: 8px;
+}
+
+
+.private-info {
+    box-shadow: 2px 2px 5px grey;
+    position: absolute;
+    top: 325px;
+    left: 350px;
+    right: 100%;
+    width: 100%;
+    height: 143%;
+    background-color: #EDEDE9;
+    color: #000000;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    padding: 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  
+  .private-info h2 {
+    font-size: 35px;
+    margin-bottom: 30px;
+  }
+  
+  .private-info label {
     font-weight: bold;
-}
-#update-btn {
-    display: block;
-   margin: 20px auto 0;
-    background-color: #00BBCC;
+    font-size: 29px;
+  }
+  
+  .private-info input[type="text"],
+  .private-info select {
+    width: 492px;
+    padding: 15px;
+    margin-bottom: 11px;
     border: none;
-    border-radius: 5px;
-    color: white;
-    font-size: 18px;
-    height: 45px;
-    width: 120px;
-    
+    border-radius: 6px;
+  }
+  
+  .private-info select {
+    background-color: #fff;
+  }
+  
+  .private-info button {
+    background-color: transparent;
+    color: #3300ff;
+    border: 1px solid #3300ff;
+    padding: 5px 10px;
+    border-radius: 14px;
+    width: 80px;
+    margin-top: 5px;
+  }
+  
+  .private-info button:hover {
+    background-color: #fff;
+    color: #3D4BAF;
+  }
+   
+
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+input,
+select {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
 }
